[tool.poetry]
name = "layanan-masyarakat"
version = "0.1.0"
description = "Machine Learning Model for Public Services Recommendation"
authors = ["imadenugraha <imadenugraha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
scikit-fuzzy = "^0.5.0"
packaging = "^24.2"
networkx = "^3.4.2"
numpy = "^2.2.1"
imbalanced-learn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
